WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
149101
CharacterData API parameters should not be optional
https://bugs.webkit.org/show_bug.cgi?id=149101
Summary
CharacterData API parameters should not be optional
Chris Dumez
Reported
2015-09-12 22:21:05 PDT
Calling Text.appendData() / Comment.appendData() without parameter should throw:
https://dom.spec.whatwg.org/#characterdata
(parameter is mandatory) However, WebKit currently does not throw and appends the string "undefined". Firefox and Chrome match the specification and throw in this case.
Attachments
Patch
(26.35 KB, patch)
2015-09-12 23:21 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2015-09-12 22:21:36 PDT
rdar://problem/22546954
Chris Dumez
Comment 2
2015-09-12 23:21:38 PDT
Created
attachment 261078
[details]
Patch
WebKit Commit Bot
Comment 3
2015-09-13 19:42:19 PDT
Comment on
attachment 261078
[details]
Patch Clearing flags on attachment: 261078 Committed
r189676
: <
http://trac.webkit.org/changeset/189676
>
WebKit Commit Bot
Comment 4
2015-09-13 19:42:23 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug